compositing/video tests time out on Lion https://bugs.webkit.org/show_bug.cgi?id=70448

Reviewed by Eric Carlson.

Covered by existing tests.

AVFoundation will occasionally fill it's playback buffers before collecting enough
statistical information to answer YES to isLikelyToKeepUp.  In this situation, set the
ready state to HAVE_ENOUGH_DATA, on the presumption that if the playback buffers are
full, playback will probably not stall.

* platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
(WebCore::MediaPlayerPrivateAVFoundation::updateStates):

Canonical link: https://commits.webkit.org/86659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97944 268f45cc-cd09-0410-ab3c-d52691b4dbfc